--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [package]
-name = "move-to-masm"
+name = "move_to_miden_compiler"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+lalrpop = "0.19.7"
+lalrpop-util = "0.19.7"
+regex = "1"
+
+[build-dependencies]
+lalrpop = "0.19.7"
+
+[dev-dependencies]
+assert_cmd = "2.0.4"
